added projects page.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,32 +13,9 @@
                     <img src="{% static 'img/profile_pic.jpg' %}" style="width: 40%; height: auto">
                     <br>
                     <br>
-                    <a href="#projects" class="btn btn-info">Projects</a>
+                    <a href="{% url 'projects' %}" class="btn btn-info">Projects</a>
                     <a href="#about" class="btn btn-info">About Me</a>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="projects">
-        <div class="container">
-            <h1 class="text-white text-center">Projects</h1>
-            <div class="row">
-                {% for project in projects %}
-                    <div class="col-sm-12 col-md-6 mb-4">
-                        <div class="card">
-                            <img class="card-img-top" src="{{ project.main_photo.url }}">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ project.title }}</h5>
-                                <p class="card-text">{{ project.description }}</p>
-                                {# Check if link exists #}
-                                {% if project.live_link %}
-                                    <a href="{{ project.live_link }}" class="btn btn-info btn-block">Visit</a>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
             </div>
         </div>
     </div>
