--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,14 @@
     <title>Bobby's Resume</title>
 </head>
 <body>
+
+{% include 'partials/_navbar.html' %}
+
 {% block content %}
 
 {% endblock %}
+
+<footer class="bg-dark text-center text-white">asdf</footer>
 
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
