--- a/resume_django/static/css/style.css
+++ b/resume_django/static/css/style.css
@@ -1,29 +1,25 @@
 #feature {
     background: url(../img/resume_bg1.jpg) no-repeat top center fixed;
+    background-size: cover;
     position: relative;
-    min-height: 100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    min-height: 94vh;
     color: #fff;
 }
 
-#feature .feature-data {
-    min-height: 60vh;
-    position: relative;
-    border-radius: 5px;
-}
-
 #feature .overlay {
-    content: '';
     position: absolute;
-    padding-top: 5vh;
     left: 0;
-    min-height: 60vh;
+    height: 94vh;
     width: 100%;
     background: rgba(51, 51, 51, 0.8);
 }
 
-#projects {
-    padding-top: 10vh;
-    min-height: 100vh;
+.projects {
+    padding-top: 5vh;
+    min-height: 91.5vh;
     background-color: black;
 }
 
