--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,18 +5,16 @@
 {% block content %}
     <div id="feature">
         <div class="container text-center">
-            <div class="feature-data p-5">
                 <div class="overlay p-5">
                     <h1 class="display-4 mb-4">
                         Bobby Gifford
                     </h1>
-                    <img src="{% static 'img/profile_pic.jpg' %}" style="width: 40%; height: auto">
+                    <img src="{% static 'img/profile_pic.jpg' %}" style="height: 40vh">
                     <br>
                     <br>
                     <a href="{% url 'projects' %}" class="btn btn-info">Projects</a>
                     <a href="#about" class="btn btn-info">About Me</a>
                 </div>
-            </div>
         </div>
     </div>
 
