--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
-
 {% block content %}
-    <div id="projects">
+    <div class="projects">
         <div class="container">
             <h1 class="text-white text-center">Projects</h1>
             <div class="row">
                 {% for project in projects %}
-                    <div class="col-sm-12 col-md-6 mb-4">
-                        <div class="card">
-                            <img class="card-img-top" src="{{ project.main_photo.url }}">
+                    <div class="col-sm-12 col-md-4 mb-4">
+                        <div class="card" style="height: 23rem">
+                            <div class="card-header text-center"><h5>{{ project.title }}</h5></div>
+                            <img class="card-img-top img-fluid" src="{{ project.main_photo.url }}" alt="main"
+                                 style="max-height: 25vh">
                             <div class="card-body">
-                                <h5 class="card-title">{{ project.title }}</h5>
-                                <p class="card-text">{{ project.description }}</p>
-                                {# Check if link exists #}
-                                {% if project.live_link %}
-                                    <a href="{{ project.live_link }}" class="btn btn-info btn-block">Visit</a>
-                                {% endif %}
+                                <div class="card-text text-center">
+                                    <a href="{% url 'project' project.id %}" class="btn btn-secondary">Details</a>
+                                    {# Check if link exists #}
+                                    {% if project.live_link %}
+                                        <a href="{{ project.live_link }}" class="btn btn-info">Visit</a>
+                                    {% endif %}
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -23,5 +25,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
