--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -3,55 +3,16 @@
 {% load static %}
 
 {% block content %}
-    <div id="feature">
-        <div class="container text-center">
-                <div class="overlay p-5">
-                    <h1 class="display-4 mb-4">
-                        Bobby Gifford
-                    </h1>
-                    <img src="{% static 'img/profile_pic.jpg' %}" style="height: 40vh">
-                    <br>
-                    <br>
-                    <a href="{% url 'projects' %}" class="btn btn-info">Projects</a>
-                    <a href="#about" class="btn btn-info">About Me</a>
-                </div>
-        </div>
-    </div>
-
-
-    <div id="about">
-        <div class="container area">
-            <div class="content">
-                <h3 class="text-center">What sets me apart</h3>
-                <hr class="bg-white"/>
-                My attitude sets me apart. I have a "go getter" mentality. I am self made and self driven. No one is
-                more driven than me.
-                When I set a goal I conquer it. Most of my peers see themselves as a (insert popular language)
-                Developer.
-                I see myself as a Developer in general. I love all coding languages and use whatever tool is necessary
-                for the job.
-                I believe I enjoy coding more than most of my peers.
-                <br>
-                <br>
-                If you love your project and want someone who gives themselves fully to projects, choose me.
-                <br>
-                <br>
-                <h3 class="text-center">About Me</h3>
-                <hr class="bg-white"/>
-                My name is Robert but I go by Bobby. I am a software developer currently living in Cupertino across the
-                street from Apple.
-                <br>
-                <br>
-                I started using JavaScript in 2010, slightly before I went to college. I immediately fell in love with
-                it. My specialty is in web development. Most of my work has been front end, although I have worked with
-                full stack and continue to. My specialty is the MERN stack, Mongo Express, React, and Node. I am willing
-                and open to use any language or framework. My tech stack is always growing.
-                <br>
-                <br>
-                I am originally from Seattle. I moved to the Bay Area in early 2017 and have been working in software
-                since. My interests involve playing guitar, football (college and NFL), and taking Udemy courses. I am
-                constantly taking Udemy courses, it is by far my favorite activity.
-            </div>
+    <div class="container text-center">
+        <div class="p-5">
+            <h1 class="display-4 mb-4">
+                Bobby Gifford
+            </h1>
+            <img src="{% static 'img/profile_pic.jpg' %}" style="height: 40vh">
+            <br>
+            <br>
+            <a href="{% url 'projects' %}" class="btn btn-forest">Projects</a>
+            <a href="{% url 'about' %}" class="btn btn-forest">About Me</a>
         </div>
     </div>
 
