--- a/templates/pages/project.html
+++ b/templates/pages/project.html
@@ -1,19 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="projects">
-        <div class="container text-white">
-            <h1 class="text-center">{{ project.title }}</h1>
+    <div class="container text-white">
+        <h1 class="display-4 text-center">{{ project.title }}</h1>
 
-            <div class="col-md-8 offset-md-2">
-                <img src="{{ project.main_photo.url }}" alt="main" class="img-fluid"
-                     style="max-height: 50vh; margin: 0 auto;">
+        <div class="col-md-8 offset-md-2">
+            <img src="{{ project.main_photo.url }}" alt="main" class="img-fluid mb-2"
+                 style="max-height: 50vh; margin: 0 auto;">
 
-                <h5>Tech Used:</h5>
+            <h5>Tech Used:</h5>
+            <div class="my-4">
                 {% for skill in skills %}
-                    <span class="btn btn-info">{{ skill }}</span>
+                    <span class="skill_badge">{{ skill }}</span>
                 {% endfor %}
-                <div>{{ project.description }}</div>
+            </div>
+            <div class="bg-green">
+                {{ project.description }}
             </div>
         </div>
     </div>
