--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -1,28 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="projects">
-        <div class="container">
-            <h1 class="text-white text-center">Projects</h1>
-            <div class="row">
-                {% for project in projects %}
-                    <div class="col-sm-12 col-md-4 mb-4">
-                        <div class="card" style="height: 23rem">
-                            <div class="card-header text-center"><h5>{{ project.title }}</h5></div>
-                            <img class="card-img-top img-fluid" src="{{ project.main_photo.url }}" alt="main"
-                                 style="max-height: 25vh">
-                            <div class="card-body">
-                                <div class="card-text text-center">
-                                    <a href="{% url 'project' project.id %}" class="btn btn-secondary">Details</a>
-                                    {# Check if link exists #}
-                                    {% if project.live_link %}
-                                        <a href="{{ project.live_link }}" class="btn btn-info">Visit</a>
-                                    {% endif %}
-                                </div>
-                            </div>
+    <div class="container">
+        <h1 class="display-4 text-white text-center py-3">Projects</h1>
+        <div class="row">
+            {% for project in projects %}
+                <div class="col-sm-12 col-md-4 mb-4">
+                    <div class="bg-project-card text-center" style="height: 20rem">
+                        <h5 class="lead">{{ project.title }}</h5>
+                        <img class="img-fluid" src="{{ project.main_photo.url }}" alt="main">
+                        <div class="my-2">
+                            <a href="{% url 'project' project.id %}" class="btn btn-forest">Details</a>
+                            {# Check if link exists #}
+                            {% if project.live_link %}
+                                <a href="{{ project.live_link }}" class="btn btn-visit">Visit</a>
+                            {% endif %}
                         </div>
                     </div>
-                {% endfor %}
-            </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
