--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-info">
+<nav class="navbar navbar-expand-lg navbar-dark bg-green">
     <a class="navbar-brand" href="{% url 'index' %}">Robert's Resume</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,11 +6,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'projects' %}">Projects <span class="sr-only"></span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'projects' %}">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
         </ul>
     </div>
