--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -7,7 +7,7 @@
                 <div class="col-sm-12 col-md-4 mb-4">
                     <div class="bg-project-card text-center" style="height: 20rem">
                         <h5 class="lead">{{ project.title }}</h5>
-                        <img class="img-fluid" src="{{ project.main_photo.url }}" alt="main">
+                        <img class="img-fluid" src="{{ project.main_photo.url }}" alt="main" style="max-height: 20vh">
                         <div class="my-2">
                             <a href="{% url 'project' project.id %}" class="btn btn-forest">Details</a>
                             {# Check if link exists #}
