--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-<footer class="bg-dark text-center text-white">asdf</footer>
+<footer class="bg-dark text-center text-white">Robert Gifford's Resume</footer>
 
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
