--- a/templates/base.html
+++ b/templates/base.html
@@ -26,10 +26,10 @@
         {% block content %}
 
         {% endblock %}
+        <footer class="fixed-bottom bg-green text-center text-white">Robert Gifford's Resume</footer>
     </div>
 </div>
 
-<footer class="bg-dark text-center text-white">Robert Gifford's Resume</footer>
 
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
