--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
+    <link rel="icon" type="image/png" href="{% static 'img/icons8-resume-48.png' %}">
+
     <title>Bobby's Resume</title>
 </head>
 <body>
