--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,40 +1,70 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+    <section style="max-width: 100%;">
+        <div class="about"
+             style="background: url({% static 'img/about_forest.jpg' %}) no-repeat center center; background-size: cover;">
+            <div class="overlay">
+                {% include 'partials/_navbar.html' %}
 
-    <div class="container text-white">
-        <h1 class="display-4 text-center">About Me</h1>
+                <div class="container text-white" style="padding-top: 10vh">
+                    <h1 class="display-4">What sets me apart</h1>
+                    <hr class="bg-white"/>
+                    My attitude sets me apart. I have a "go getter" mentality. I am self made and self driven. No one is
+                    more driven than me.
+                    When I set a goal I conquer it. Most of my peers see themselves as a (insert popular language)
+                    Developer.
+                    I see myself as a Developer in general. I love all coding languages and use whatever tool is
+                    necessary
+                    for the job.
+                    I believe I enjoy coding more than most of my peers.
+                    <br>
+                    <br>
+                    If you love your project and want someone who gives themselves fully to projects, choose me.
+                    <br>
+                    <br>
+                </div>
+            </div>
+        </div>
 
-        <h3 class="text-center">What sets me apart</h3>
-        <hr class="bg-white"/>
-        My attitude sets me apart. I have a "go getter" mentality. I am self made and self driven. No one is
-        more driven than me.
-        When I set a goal I conquer it. Most of my peers see themselves as a (insert popular language)
-        Developer.
-        I see myself as a Developer in general. I love all coding languages and use whatever tool is necessary
-        for the job.
-        I believe I enjoy coding more than most of my peers.
-        <br>
-        <br>
-        If you love your project and want someone who gives themselves fully to projects, choose me.
-        <br>
-        <br>
-        <h3 class="text-center">About Me</h3>
-        <hr class="bg-white"/>
-        My name is Robert but I go by Bobby. I am a software developer currently living in Cupertino across the
-        street from Apple.
-        <br>
-        <br>
-        I started using JavaScript in 2010, slightly before I went to college. I immediately fell in love with
-        it. My specialty is in web development. Most of my work has been front end, although I have worked with
-        full stack and continue to. My specialty is the MERN stack, Mongo Express, React, and Node. I am willing
-        and open to use any language or framework. My tech stack is always growing.
-        <br>
-        <br>
-        I am originally from Seattle. I moved to the Bay Area in early 2017 and have been working in software
-        since. My interests involve playing guitar, football (college and NFL), and taking Udemy courses. I am
-        constantly taking Udemy courses, it is by far my favorite activity.
+        <div class="about-desc">
+            <div style="width: 33.33%; float: left;">
+                <h5>Frontend</h5>
+                <p>React & Bootstrap</p>
+            </div>
+            <div style="width: 33.33%; float: left;">
+                <h5>Fullstack</h5>
+                <p>Django, Node, Express, AWS</p>
+            </div>
+            <div style="width: 33.33%; float: left;">
+                <h5>Databases</h5>
+                <p>MongoDB & Postgres</p>
+            </div>
+        </div>
 
+        <div class="about-me">
+            <div style="width: 50%; float: left; margin-left: 15vw">
+                <h3 class="text-center display-4">About Me</h3>
+                <hr class="bg-white"/>
+                My name is Robert but I go by Bobby. I am a software developer currently living in Cupertino across the
+                street from Apple.
+                <br>
+                <br>
+                I started using JavaScript in 2010, slightly before I went to college. I immediately fell in love with
+                it. My specialty is in web development. Most of my work has been front end, although I have worked with
+                full stack and continue to. My specialty is the MERN stack, Mongo Express, React, and Node. I am willing
+                and open to use any language or framework. My tech stack is always growing.
+                <br>
+                <br>
+                I am originally from Seattle. I moved to the Bay Area in early 2017 and have been working in software
+                since. My interests involve playing guitar, football (college and NFL), and taking Udemy courses. I am
+                constantly taking Udemy courses, it is by far my favorite activity.
+            </div>
+            <div style="width: 25%; float: left; margin-left: 5vw;">
+                <img src="{% static 'img/profile_pic.jpg' %}" style="height: 50vh">
+            </div>
+        </div>
+    </section>
 
-    </div>
 {% endblock %}
