Added more images.

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div class="about-desc">
+        <div class="about-desc d-sm-none d-none d-md-block">
             <div style="width: 33.33%; float: left;">
                 <h5>Frontend</h5>
                 <p>React & Bootstrap</p>
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div class="about-me">
+        <div class="about-me d-sm-none d-none d-md-block">
             <div style="width: 50%; float: left; margin-left: 15vw">
                 <h3 class="text-center display-4">About Me</h3>
                 <hr class="bg-white"/>
