--- a/templates/pages/project.html
+++ b/templates/pages/project.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="feature">
+    <div class="project">
         <div class="overlay">
             {% include 'partials/_navbar.html' %}
 
