--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="feature">
+    <div class="projects">
         <div class="overlay">
             {% include 'partials/_navbar.html' %}
 
