--- a/resume_django/static/css/style.css
+++ b/resume_django/static/css/style.css
@@ -55,8 +55,48 @@
 
 .about-me {
     padding-top: 5vh;
-    height: 65vh;
+    min-height: 65vh;
     background-color: rgba(222, 203, 164, .5);
+}
+
+.projects {
+    background: url(../img/projects-bg.jpeg) no-repeat center center;
+    background-size: cover;
+    position: relative;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    min-height: 100vh;
+    color: #fff;
+}
+
+
+.projects .overlay {
+    position: relative;
+    left: 0;
+    min-height: 100vh;
+    width: 100%;
+    background: rgba(51, 51, 51, 0.2);
+}
+
+.project {
+    background: url(../img/project-bg.jpg) no-repeat center center;
+    background-size: cover;
+    position: relative;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    min-height: 100vh;
+    color: #fff;
+}
+
+
+.project .overlay {
+    position: relative;
+    left: 0;
+    min-height: 100vh;
+    width: 100%;
+    background: rgba(51, 51, 51, 0.4);
 }
 
 
