--- a/templates/pages/project.html
+++ b/templates/pages/project.html
@@ -8,10 +8,10 @@
             <div class="container text-white">
                 <h1 class="display-4 text-center">{{ project.title }}</h1>
 
-                <div class="col-md-8 offset-md-2">
-                    <img src="{{ project.main_photo.url }}" alt="main" class="img-fluid mb-2"
-                         style="max-height: 50vh; margin: 0 auto;">
+                <img src="{{ project.main_photo.url }}" alt="main" class="mb-2"
+                     style="max-height: 50vh; display: block; margin-left: auto; margin-right: auto">
 
+                <div style="margin-left: 10vw">
                     <h5>Tech Used:</h5>
                     <div class="my-4">
                         {% for skill in skills %}
